--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://Rishugeek.github.io/",
+	"homepage": "https://Rishugeek.github.io/my-project",
 	"name": "my-project",
 	"version": "0.0.1",
 	"private": true,
